# cmake_template

./: .clang-format  .gdb_history  .gitignore  .gitmodules  .service  CMakeLists.txt  Makefile  README.md  checklist.md  cmake_guide.md  diff_output.txt  helgrind-suppressions.txt  install_dependencies.sh  project_generator.sh  test_template_generator.py
apps/: CMakeLists.txt
apps/salt_vault/: CMakeLists.txt  README.md  TweetNaCl.md
apps/salt_vault/client/: CMakeLists.txt
apps/salt_vault/client/include/: client.h
apps/salt_vault/client/src/: client.c
apps/salt_vault/server/: CMakeLists.txt
apps/salt_vault/server/docs/: README.md  packet_info.html
apps/salt_vault/server/include/: config.h  file_manager.h  option_handler.h  session_manager.h  thread_routines.h
apps/salt_vault/server/src/: config.c  file_manager.c  main.c  option_handler.c  session_manager.c  thread_routines.c
cmake/: README.md  add-localized-app.cmake  add-localized-lib.cmake  adsan-config.cmake  build-type-config.cmake  buildsystem.cmake  clang-tidy-config.cmake  color-utils.cmake  common.cmake  output-config.cmake  output-localization.cmake  paths-config.cmake  project-config.cmake  testing-config.cmake  toolchain-config.cmake  utilities.cmake  warnings-config.cmake
cmake/checks/: tidy-checks.cmake
cmake/install/: install_all_files.cmake  install_file.cmake  install_target.cmake
cmake/libraries/: add_all_libraries.cmake  add_all_libs.cmake  add_lib.cmake  add_user_library.cmake  create_lib.cmake  create_library.cmake  setup_library.cmake
cmake/options/: disable_warnings.cmake  set_default_debug_options.cmake  set_default_release_options.cmake
cmake/targets/: README.md  add_all_targets.cmake
cmake/targets/core/: add_target.cmake
cmake/testing/: README.md  add_all_tests.cmake  add_cunit_test.cmake  add_gtest.cmake  add_single_test.cmake  add_test.cmake
cmake/toolchains/: README.md  aarch64-glibc-toolchain.cmake
dependencies/: CMakeLists.txt
docs/: README.md  build_system.md  cmake_build_system_guide.md  project-structure-guide.md
docs/cross_compilation/: 1_cross_compilation_setup_aarch64.md  2_aarch64_cunit_guide.md
libraries/0_Common/include/: file_io.h  signal_handler.h
libraries/0_Common/src/: file_io.c  utilities.c
libraries/1_Math/include/: number_converter.h
libraries/1_Math/src/: number_generator.c
libraries/2_DataStructures/include/: adjacency_matrix.h  queue.h
libraries/2_DataStructures/src/: vector.c
libraries/3_Threading/src/: threadpool.c
libraries/4_Networking/src/: tcp_server.c
libraries/Common/docs/: todo.md
libraries/Common/include/: callback_types.h  client_args.h  comparisons.h  signal_handler.h  string_operations.h  system_info.h  utilities.h
libraries/Common/src/: comparisons.c  signal_handler.c  string_operations.c  system_info.c  utilities.c
libraries/DSA/include/: adjacency_list.h  linked_list.h  stack.h
libraries/DSA/src/: adjacency_matrix.c  hash_table.c  linked_list.c  queue.c  stack.c
libraries/Math/include/: number_generator.h
libraries/Math/src/: number_converter.c
libraries/Networking/include/: socket_io.h
libraries/Networking/src/: socket_io.c  tcp_server.c
libraries/Threading/include/: threadpool.h
libraries/Threading/src/: threadpool.c
libs/: CMakeLists.txt
libs/Core/: CMakeLists.txt
libs/Core/include/: comparisons.h  default_free.h  utilities.h
libs/Core/src/: comparisons.c  default_free.c
libs/Crypto/: CMakeLists.txt
libs/Crypto/include/: encryption.h  tweetnacl.h
libs/Crypto/src/: encryption.c  tweetnacl.c
libs/Crypto/tests/: encryption_tests.c  test_runner.c
libs/DSA/: CMakeLists.txt
libs/DSA/adjacency_list/include/: adjacency_list.h
libs/DSA/adjacency_list/src/: adjacency_list.c
libs/DSA/adjacency_list/tests/: adjacency_list_tests.c
libs/DSA/adjacency_matrix/include/: adjacency_matrix.h
libs/DSA/adjacency_matrix/src/: adjacency_matrix.c
libs/DSA/hash_table/src/: hash_table.c
libs/DSA/linked_list/include/: linked_list.h
libs/DSA/linked_list/src/: linked_list.c
libs/DSA/linked_list/tests/: linked_list_tests.c  test_runner.c
libs/DSA/queue/docs/: tech_spec.md  user_guide.md
libs/DSA/queue/include/: queue.h
libs/DSA/queue/src/: queue.c
libs/DSA/queue/tests/: queue_tests.c
libs/DSA/stack/src/: stack.c
libs/DSA/stack/tests/: stack_tests.c  test_runner.c
libs/DSA/vector/include/: vector.h
libs/DSA/vector/src/: vector.c
libs/IO/: CMakeLists.txt
libs/IO/include/: file_io.h  threadsafe_io.h
libs/IO/src/: file_io.c  threadsafe_io.c
libs/Logging/: CMakeLists.txt
libs/Logging/include/: log.h  runtime_log.h
libs/Logging/src/: runtime_log.c
libs/Math/: CMakeLists.txt
libs/Math/src/: number_converter.c  number_generator.c
libs/Networking/: CMakeLists.txt
libs/Networking/common/include/: socket_io.h
libs/Networking/common/src/: socket_io.c
libs/Networking/tcp_server/include/: server_structs.h  socket_manager.h
libs/Networking/tcp_server/src/: event_handler.c  socket_manager.c  tcp_server.c
libs/Signals/: CMakeLists.txt
libs/Signals/include/: signal_handler.h
libs/Signals/src/: signal_handler_multi_thread.c  signal_handler_single_thread.c
libs/Signals/tests/: signal_handler_multi_thread_tests.c  signal_handler_single_thread_tests.c  test_runner.c
libs/Strings/: CMakeLists.txt
libs/Strings/src/: string_operations.c
libs/System/: CMakeLists.txt
libs/System/include/: system_info.h
libs/System/src/: system_info.c
libs/Threading/: CMakeLists.txt
libs/Threading/docs/: tech_spec.md  user_guide.md
libs/Threading/include/: thread_pool.h
libs/Threading/src/: thread_pool.c
misc/: CMakeLists.txt  project_info.h  project_info.h.in
projects/BSLE/local/: client.py
projects/local/: client.py  client_2.py
projects/maze/samples/: doors.txt  horz_walls.txt  multi_end.txt  multi_start.txt  no_bottom.txt  no_end.txt  no_left.txt  no_path.txt  no_right.txt  no_start.txt  no_top.txt  valid.txt  valid_no_path.txt  vert_walls.txt  walls.txt  water.txt  water_doors.txt
projects/remote/include/: lights.h  opcodes.h  packets.h  (+1 more)
(+83 files in other folders)
